SoftwareEngineering/lab1/compiling_error.txt
C:\Users\SEMCDONA\Documents\collegeWork\SoftwareEngineering\lab1\LCA.cpp: In instantiation of ‘void LCAImplementation::BT<T>::postorder(LCAImplementation::Node<T>*) [with T = int]’:
C:\Users\SEMCDONA\Documents\collegeWork\SoftwareEngineering\lab1\LCA.cpp:185:31:   required from here
C:\Users\SEMCDONA\Documents\collegeWork\SoftwareEngineering\lab1\LCA.cpp:124:27: error: ‘getHeight’ was not declared in this scope
     int height = getHeight(p) * 2;
                  ~~~~~~~~~^~~
